--- a/Resources/LaunchScreen.xib
+++ b/Resources/LaunchScreen.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6254"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -10,19 +10,16 @@
             <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ba7-6Y-fVr">
-                    <rect key="frame" x="0.0" y="0.0" width="480" height="64"/>
-                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="64" id="ODJ-JP-XDZ"/>
-                    </constraints>
-                </view>
+                <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WgV-Ch-jdU">
+                    <rect key="frame" x="0.0" y="436" width="480" height="44"/>
+                    <items/>
+                </toolbar>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="ba7-6Y-fVr" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="88n-qs-eLt"/>
-                <constraint firstItem="ba7-6Y-fVr" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="aTL-FC-VXg"/>
-                <constraint firstAttribute="trailing" secondItem="ba7-6Y-fVr" secondAttribute="trailing" id="ucR-eJ-maN"/>
+                <constraint firstAttribute="trailing" secondItem="WgV-Ch-jdU" secondAttribute="trailing" id="GMk-RO-6Ee"/>
+                <constraint firstItem="WgV-Ch-jdU" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="KaO-Wa-Y86"/>
+                <constraint firstAttribute="bottom" secondItem="WgV-Ch-jdU" secondAttribute="bottom" id="msV-lP-ngu"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
