--- a/Resources/Main.storyboard
+++ b/Resources/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -17,15 +18,31 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0Nc-xc-agc">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <rect key="frame" x="0.0" y="20" width="600" height="536"/>
                             </mapView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cH1-Tx-VNI">
+                                <rect key="frame" x="0.0" y="556" width="600" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="Kje-Cf-HM5"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="44" id="TkI-yB-Csr"/>
+                                </constraints>
+                                <items>
+                                    <barButtonItem title="Item" id="AAY-mH-sri"/>
+                                </items>
+                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="0Nc-xc-agc" secondAttribute="trailing" id="4sS-1w-S6n"/>
-                            <constraint firstItem="0Nc-xc-agc" firstAttribute="bottom" secondItem="2fi-mo-0CV" secondAttribute="top" id="HwE-gw-Uxb"/>
-                            <constraint firstItem="0Nc-xc-agc" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" id="Ktf-aY-gtW"/>
-                            <constraint firstItem="0Nc-xc-agc" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="XhY-6I-luB"/>
+                            <constraint firstAttribute="trailing" secondItem="0Nc-xc-agc" secondAttribute="trailing" id="6YZ-N9-Igi"/>
+                            <constraint firstItem="0Nc-xc-agc" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" constant="20" id="BAK-aB-m8x"/>
+                            <constraint firstItem="cH1-Tx-VNI" firstAttribute="top" secondItem="0Nc-xc-agc" secondAttribute="bottom" id="M4U-kL-mYG"/>
+                            <constraint firstItem="cH1-Tx-VNI" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="Osw-Qa-gOH"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="cH1-Tx-VNI" secondAttribute="bottom" id="QfX-in-fo0"/>
+                            <constraint firstAttribute="trailing" secondItem="cH1-Tx-VNI" secondAttribute="trailing" id="Xbo-cP-HhG"/>
+                            <constraint firstItem="cH1-Tx-VNI" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="gEk-SE-CdV"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="cH1-Tx-VNI" secondAttribute="trailing" constant="-16" id="jC0-UZ-cPI"/>
+                            <constraint firstItem="0Nc-xc-agc" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="ruc-m0-ILM"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="cH1-Tx-VNI" secondAttribute="bottom" id="vhp-uk-aoY"/>
                         </constraints>
                     </view>
                 </viewController>
