--- a/Resources/Main.storyboard
+++ b/Resources/Main.storyboard
@@ -5,10 +5,10 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Stores View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="Stores_Locator" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="StoresViewController" customModule="Stores_Locator" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
@@ -17,37 +17,39 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0Nc-xc-agc">
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" pitchEnabled="NO" showsUserLocation="YES" showsPointsOfInterest="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Nc-xc-agc">
                                 <rect key="frame" x="0.0" y="20" width="600" height="536"/>
                             </mapView>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cH1-Tx-VNI">
                                 <rect key="frame" x="0.0" y="556" width="600" height="44"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="Kje-Cf-HM5"/>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="44" id="TkI-yB-Csr"/>
-                                </constraints>
                                 <items>
-                                    <barButtonItem title="Item" id="AAY-mH-sri"/>
+                                    <barButtonItem image="location_arrow" id="AAY-mH-sri"/>
                                 </items>
                             </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="0Nc-xc-agc" secondAttribute="trailing" id="6YZ-N9-Igi"/>
-                            <constraint firstItem="0Nc-xc-agc" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" constant="20" id="BAK-aB-m8x"/>
-                            <constraint firstItem="cH1-Tx-VNI" firstAttribute="top" secondItem="0Nc-xc-agc" secondAttribute="bottom" id="M4U-kL-mYG"/>
-                            <constraint firstItem="cH1-Tx-VNI" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="Osw-Qa-gOH"/>
-                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="cH1-Tx-VNI" secondAttribute="bottom" id="QfX-in-fo0"/>
-                            <constraint firstAttribute="trailing" secondItem="cH1-Tx-VNI" secondAttribute="trailing" id="Xbo-cP-HhG"/>
+                            <constraint firstItem="0Nc-xc-agc" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="1gl-dE-hye"/>
+                            <constraint firstItem="cH1-Tx-VNI" firstAttribute="top" secondItem="0Nc-xc-agc" secondAttribute="bottom" id="21Z-dx-EIy"/>
+                            <constraint firstItem="0Nc-xc-agc" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" id="GpC-Nr-aG0"/>
+                            <constraint firstItem="cH1-Tx-VNI" firstAttribute="trailing" secondItem="0Nc-xc-agc" secondAttribute="trailing" id="Hfu-yI-jh5"/>
+                            <constraint firstAttribute="trailing" secondItem="cH1-Tx-VNI" secondAttribute="trailing" id="IYH-Zi-Ejg"/>
                             <constraint firstItem="cH1-Tx-VNI" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="gEk-SE-CdV"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="cH1-Tx-VNI" secondAttribute="trailing" constant="-16" id="jC0-UZ-cPI"/>
-                            <constraint firstItem="0Nc-xc-agc" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="ruc-m0-ILM"/>
-                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="cH1-Tx-VNI" secondAttribute="bottom" id="vhp-uk-aoY"/>
+                            <constraint firstItem="cH1-Tx-VNI" firstAttribute="bottom" secondItem="2fi-mo-0CV" secondAttribute="top" id="pgj-fo-n7D"/>
+                            <constraint firstItem="cH1-Tx-VNI" firstAttribute="leading" secondItem="0Nc-xc-agc" secondAttribute="leading" id="pkQ-rs-tUj"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="gEk-SE-CdV"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
     </scenes>
+    <resources>
+        <image name="location_arrow" width="24" height="24"/>
+    </resources>
 </document>
